--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-cron": "^3.0.0",
     "uuid": "^8.3.2"
