--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Group projec for TalentQL program\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./ --fix",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -24,6 +24,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.12",
     "prisma": "^2.30.2"
   }
