--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"Group projec for TalentQL program\"",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no tests specified\" && exit 0",
     "lint": "eslint ./ --fix",
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -27,6 +28,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.12",
     "prisma": "^2.30.2"
   }
