--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,10 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
+    "plugins": ["jest"],
     "extends": [
         "airbnb-base"
     ],
@@ -19,6 +21,7 @@
       "no-return-await": 0, 
       "class-methods-use-this": 0, 
       "max-len": [0, 180], 
-      "no-console": 2
+      "no-console": 1
     }
+
 }
