--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async-redis": "^2.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "eslint-plugin-jest": "^25.2.2",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "html-pdf": "^3.0.1",
